# NEU-CS5330-CV

./: .gitignore
final_project/: CMakeLists.txt  README.md
final_project/include/: utils.h
final_project/results/: opencv.csv  self.csv  wechat.csv
final_project/src/: extension.cpp  main.cpp  main.py  utils.cpp
proj1/: CMakeLists.txt  README.txt
proj1/include/: filter.h
proj1/src/: filter.cpp  imgDisplay.cpp  vidDisplay.cpp
proj2/: CMakeLists.txt  README.md
proj2/include/: features.h
proj2/src/: features.cpp  main.cpp
proj3/: CMakeLists.txt  README.md  evaluation.txt  features.txt  test_features.txt
proj3/include/: classifier.h  database.h  segmentation.h
proj3/src/: classifier.cpp  client.cpp  database.cpp  main.cpp  retrieval.cpp  segmentation.cpp
proj4/: CMakeLists.txt  README.md  camera_intrinsic_paras_camera_1_chessboard.csv  camera_intrinsic_paras_camera_1_circlesgrid.csv
proj4/include/: utils.h
proj4/src/: ar.cpp  extension.cpp  feature.cpp  main.cpp  utils.cpp
proj5/: README.md
proj5/extensions/: exploration.py  gabor.py  live_video_digit_recognition.py
proj5/task1/: diagram  model.py  predict.py
proj5/task1/results/: model.pth  optimizer.pth
proj5/task2/: examine.py
proj5/task3/: category.csv  data.csv  embedding.py
proj5/task4/: experiments.ipynb
proj5/task4/.ipynb_checkpoints/: experiments-checkpoint.ipynb
proj5/task4/results/: 2.pth  2_opt.pth  3.pth  3_opt.pth  4.pth  4_opt.pth  5.pth  5_opt.pth  6.pth  6_opt.pth  7.pth  7_opt.pth  baseline.pth  baseline_opt.pth  exp2_11.pth  exp2_11_opt.pth  exp2_13.pth  (+58 more)
